Bug 218093 - Crash when "removing" item from empty "Do not scan" list
Summary: Crash when "removing" item from empty "Do not scan" list
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
: 224247 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-10 10:51 UTC by Romain
Modified: 2010-03-13 15:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Romain 2009-12-10 10:51:51 UTC
Version:           1.9rc3 (using KDE 4.3.2)
OS:                Linux
Installed from:    Debian stable Packages

1. In the configuration dialog, "scanning" tab: the list of "Do not scan" directories is empty but the "Remove" button is active. Clicking it leads to a crash.

2. When adding a directory to the list, the "Remove" button becomes inactive. The directory is visible in the config file so I can remove it from there.

3. Directories listed in the "Do not scan" list are scanned anyway.


=> Best guess: the "is the list empty ?" logic is reversed.
Comment 1 Jakub Stachowski 2010-03-13 14:10:23 UTC
SVN commit 1102741 by qbast:

Fix crashes during removal items from do not scan list

BUG: 218093



 M  +4 -2      settingsDialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1102741
Comment 2 Jakub Stachowski 2010-03-13 15:38:41 UTC
*** Bug 224247 has been marked as a duplicate of this bug. ***