Fix crashes during removal items from do not scan list

BUG: 218093


svn path=/trunk/playground/utils/filelight/; revision=1102741